# pcsfit

./: CMakeLists.txt  data.cpp  data.hpp  fit.cpp  fit.hpp  integrate.cpp  integrate.hpp  main.cpp  makefile  maths.cpp  maths.hpp  minimiser.hpp  model.cpp  model.hpp  model2.cpp  model2.hpp  model_common.cpp  model_common.hpp  model_gauss.cpp  model_point.cpp  model_series.cpp  point.cpp  pointdev.cpp  pointdev.hpp  tests.cpp  tests.hpp  threads.cpp  threads.hpp  vis.cpp  vis.hpp
